# jtbd-knowledge-skill

./: 01-theory-foundation.md  02-principles.md  03-forces-of-progress.md  04-system-of-progress.md  05-research-methods.md  06-analysis-framework.md  07-innovation-guide.md  08-business-decisions.md  09-case-studies.md  10-two-models.md  11-quick-reference.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  SKILL.md  __init__.py  pyproject.toml  requirements.txt
jtbd/: __init__.py  competition.py  config.py  forces.py  growth.py  innovation.py  interview_generator.py  job_map.py  job_stories.py  jobs_atlas.py  jtbd_analyzer.py  marketing.py  obstacles.py  outcome_statement.py  priority_calculator.py  survey_generator.py  templates.py  utils.py
jtbd/tests/: test_all.py
jtbd_knowledge_skill.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
references/: 01-theory-foundation.md  02-principles.md  03-forces-of-progress.md  04-system-of-progress.md  05-research-methods.md  06-analysis-framework.md  07-innovation-guide.md  08-business-decisions.md  09-case-studies.md  10-two-models.md  11-quick-reference.md  12-odi-methodology.md  13-jobs-atlas.md  14-playbook-tools.md  15-glossary.md
