[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jtbd-knowledge-skill"
version = "2.0.0"
description = "JTBD (Jobs to Be Done) 理论工具包 - 基于《When Coffee and Kale Compete》"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "fliggy-design-UR"}]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["jtbd*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
